HAP-762 fix menu clipping

--- a/softWrench.sW4.Web/Content/styles/hapag/grid.css
+++ b/softWrench.sW4.Web/Content/styles/hapag/grid.css
@@ -27,6 +27,11 @@
     top: -85px;
 }
 
+.crudsubtemplate {
+    position: relative;
+    top: -85px;
+}
+
 @media only screen and (min-width: 1090px) {
     .listgrid-table {
         /*margin-top: 117px !important;*/
@@ -45,4 +50,8 @@
         position: fixed;
         top: 84px !important;
     }
+
+    .crudsubtemplate {
+    top: 0;
+}
 }
