--- a/softWrench.sW4.Web/Content/styles/hapag/site.css
+++ b/softWrench.sW4.Web/Content/styles/hapag/site.css
@@ -251,7 +251,7 @@ body {
 }
 
 .hapag-body {
-    margin-top: 225px;
+    /*margin-top: 225px;*/
 }
 
 .hapag-body-loaded {
